--- a/style.css
+++ b/style.css
@@ -11,5 +11,5 @@ body {
 }
 
 h1, h2, h3 {
-    color: #1a4f72; /* A darker blue for headings */
-}
+    color: #729fbe; /* A darker blue for headings */
+} 
